# Claude-Spec-Critic

./: .gitignore  CLAUDE.md  HANDBOOK_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  REVIEW_FOLLOWUPS.md  STRUCTURAL_AUDIT.md  TRUST_AUDIT.md  build.bat  convert-doc-to-docx.ps1  gui.py  main.py  pyproject.toml  requirements.txt  spec-review.spec  test_spec.docx
docs/: RELEASE_WINDOWS.md  datacenter_fire_module_plan.md  drawings_session_2_handoff.md  hyperscale_datacenter_module_plan.md  standards_provenance.md
evals/: __init__.py  baseline.json  fixtures.py  harness.py  judge.py  labeled_specs.py  live_capture.py  runner.py
handbook/: 00_preface.md  01_problem_domain.md  02_architecture.md  03_end_to_end_flow.md  04_input.md  05_review_engine.md  06_batch_processing.md  07_orchestration.md  08_cross_spec_coordination.md  09_verification_routing.md  10_verification_grounding.md  11_trust_model_and_output.md  12_configuration_and_models.md  13_gui.md  14_observability.md  15_quality_engineering.md  16_trust_under_the_microscope.md  17_evolution_and_lessons.md  ASSEMBLY_NOTES.md  README.md
handbook_prompts/: ch00_preface.md  ch01_problem_domain.md  ch02_architecture.md  ch03_end_to_end_flow.md  ch04_input.md  ch05_review_engine.md  ch06_batch_processing.md  ch07_orchestration.md  ch08_cross_spec_coordination.md  ch09_verification_routing.md  ch10_verification_grounding.md  ch11_trust_model_and_output.md  ch12_configuration_and_models.md  ch13_gui.md  ch14_observability.md  ch15_quality_engineering.md  ch16_trust_under_the_microscope.md  ch17_evolution_and_lessons.md  wave_d_assembly.md
review_2025-12-24_101448/: findings.json  inputs_combined.txt  raw_response.txt  report.docx  token_summary.json
scripts/: recover_batch.py
specs/: 211313 - AUTOMATIC FIRE SPRINKLERS.doc  211313 - AUTOMATIC FIRE SPRINKLERS.docx  220517 fl - Sleeves and Sleeve Seals for Plumbing Piping.doc  220517 fl - Sleeves and Sleeve Seals for Plumbing Piping.docx  220518 fl - Escutcheons for Plumbing Piping.doc  220518 fl - Escutcheons for Plumbing Piping.docx  220523 fl - General-Duty Valves for Plumbing Piping.docx  220529 fl - Hangers and Supports for Plumbing Piping and Equipment.docx  220553 fl - Identification for Plumbing Piping and Equipment.doc  220553 fl - Identification for Plumbing Piping and Equipment.docx  220719 fl - Plumbing Piping Insulation.doc  221116 fl - Domestic Water Piping.doc  221119 fl - Domestic Water Piping Specialties.doc  221316 fl - Sanitary Waste and Vent Piping.doc  221319 fl - Sanitary Waste Piping Specialties.doc  (+16 more)
src/: __init__.py  cli.py  (+51 more)
(+445 files in other folders)
