[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-critic"
version = "2.8.0"
dependencies = [
    "anthropic",
    "python-docx",
    "pypdf",
    "tiktoken",
    "customtkinter",
    "platformdirs",
    "tkinterdnd2"
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "request_shape: inspects request payloads passed to the Anthropic SDK without making network calls",
    "smoke: fast import / compile sanity checks that should pass on a clean checkout",
    "fixtures: exercises the fake Anthropic response fixtures themselves",
    "parser_unification: Chunk D verification parser regression tests",
    "token_budget: Chunk E token counting and output budget regression tests",
    "slow: tests that are noticeably slower than the rest of the suite",
    "network: tests that require real Anthropic API access (skipped by default)",
]
