[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-critic"
version = "2.8.0"
dependencies = [
    "anthropic",
    "python-docx",
    "pypdf",
    "tiktoken",
    "customtkinter",
    "platformdirs",
    "tkinterdnd2"
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "token_budget: Chunk E token counting and output budget regression tests",
    "prompt_serialization: Chunk G prompt boundary / serialization hardening tests",
    "network: tests that require real Anthropic API access (skipped by default)",
]
