[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-critic"
version = "3.1.0"
license = {text = "PolyForm-Noncommercial-1.0.0"}
dependencies = [
    "anthropic>=0.97,<0.98",
    "python-docx",
    "pypdf",
    "pydantic",
    "tiktoken",
    "customtkinter",
    "platformdirs",
    "tkinterdnd2"
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "token_budget: Chunk E token counting and output budget regression tests",
    "prompt_serialization: Chunk G prompt boundary / serialization hardening tests",
    "network: tests that require real Anthropic API access (skipped by default)",
]
